--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 
     <section>
-      <img src="images\my_brand.webp" alt="Logo wireframe" width="150">
+      <img src="images/my_brand.webp" alt="Logo wireframe" width="150">
       <p>This is a basic template for a website. You can use it to create your own website.</p>
     </section>
 
