--- a/index.html
+++ b/index.html
@@ -4,11 +4,10 @@
     <meta charset="UTF-8" >
     <meta http-equiv="X-UA-Compatible" content="IE=edge" >
     <meta name="viewport" content="width=device-width, initial-scale=1.0" >
-    <meta name="description" content="This is the description of the page that is used by SEO to optimize search 
-      results and to provide a summary of the site.">
+    <meta name="description" content="Tarea Evaluativa 3.3.2 parte 1">
     <meta name="author" content="Author's name">
     <title>Dogs Crew</title>
-    <link rel="stylesheet" href="/styles/style.css" >
+    <link rel="stylesheet" href="../styles/style.css" >
     <link rel="icon" href="/images/favicon.ico" type="image/ico" sizes="16x16">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fork-awesome/1.2.0/css/fork-awesome.min.css">
   </head>
