--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Tarea Evaluativa 3.3.2 parte 1">
     <meta name="author" content="Author's name">
     <title>Dogs Crew</title>
-    <link rel="stylesheet" href="./styles/style.css" >
+    <link rel="stylesheet" href="../styles/style.css" >
     <link rel="icon" href="/images/favicon.ico" type="image/ico" sizes="16x16">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fork-awesome/1.2.0/css/fork-awesome.min.css">
   </head>
