--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   </head>
 
   <body> 
+    
   
 
     <header class="site-header">
@@ -71,7 +72,7 @@
 
     <section class="section-2">
            
-      <ul>
+      <ul id ="tresgolden">
         <div class="golden">
           <img src="images/golden.jfif" alt="Logo wireframe" width="200">
           <h2>Polo's Life</h2>
