--- a/pages/blog.html
+++ b/pages/blog.html
@@ -30,15 +30,15 @@
         <img class = "blog-banner" src="../images/blog_banner.png" alt="Banner wireframe" >
     </div>
 
-    <section>
+    <div class = "column-div">
         <h2 class ="blog-title" >Mis Aventuras por Nueva Zelanda</h2>
         <h3 class ="blog_user">Daniel Lopez</h3>
         <div class ="div-blog">
             <p id="parrafo">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas eu lorem molestie, tempor felis suscipit, tincidunt dolor. Fusce hendrerit risus a pretium sollicitudin. Ut mattis venenatis enim eget imperdiet. Integer semper venenatis ligula, eu sollicitudin nibh laoreet ac. Etiam posuere augue in finibus interdum. Ut placerat pulvinar vestibulum. Sed eget semper arcu. Sed sed tempor neque Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas eu lorem molestie, tempor felis suscipit, tincidunt dolor. Fusce hendrerit risus a pretium sollicitudin. Ut mattis venenatis enim eget imperdiet. Integer semper venenatis ligula, eu sollicitudin nibh laoreet ac. Etiam posuere augue in finibus interdum. Ut placerat pulvinar vestibulum. Sed eget semper arcu. Sed sed tempor neque Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas eu lorem molestie, tempor felis suscipit, tincidunt dolor. Fusce hendrerit risus a pretium sollicitudin. Ut mattis venenatis enim eget imperdiet. Integer semper venenatis ligula, eu sollicitudin nibh laoreet ac. Etiam posuere augue in finibus interdum. Ut placerat pulvinar vestibulum. Sed eget semper arcu. Sed sed tempor neque.
             </p>
-            <img class ="image" src="../images/nuevazelanda.jpg" alt="Blog image" width="300">    
+            <img class ="image" src="../images/nuevazelanda.jpg" alt="Blog image" >    
         </div>
-    </section>
+    </div>
 
     <section class="comments">
         <h2 class=" h-comment">Comments</h2>
